# chaos-tproxy

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  iptables.sh  iptables_clear.sh  rust-toolchain
.devcontainer/: devcontainer.json
.github/workflows/: nightly-test.yml  release.yaml  stable-test.yml
chaos-tproxy-controller/: Cargo.toml
chaos-tproxy-controller/src/: main.rs  raw_config.rs
chaos-tproxy-controller/src/cmd/: command_line.rs
chaos-tproxy-controller/src/cmd/interactive/: handler.rs
chaos-tproxy-controller/src/proxy/: config.rs  exec.rs  uds_server.rs
chaos-tproxy-controller/src/proxy/net/: arp.rs  bridge.rs  iptables.rs  mod.rs  ping.rs  routes.rs  set_net.rs
chaos-tproxy-proxy/: Cargo.toml
chaos-tproxy-proxy/src/: lib.rs  raw_config.rs  signal.rs  uds_client.rs
chaos-tproxy-proxy/src/handler/http/: action.rs  mod.rs  rule.rs  selector.rs
chaos-tproxy-proxy/src/proxy/http/: config.rs  connector.rs  server.rs
chaos-tproxy-proxy/src/proxy/tcp/: transparent_socket.rs
config-examples/: abort_by_path.yaml  json_example.json  one-line.json  tls_example.yaml  yaml_example.yaml
config-examples/config/: json_example.json  yaml_example.yaml
example/: abort_by_path.yaml
example/config/: json_example.json  yaml_example.yaml
examples/plugin-example/: Cargo.toml
examples/plugin-example/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/http/: body.rs  header.rs  message.rs  mod.rs  streaming.rs
podnetmock/: monitor.go  monitor_test.go  network.go  network_test.go
proxy/: Cargo.toml
proxy/src/: config.rs  main.rs  util.rs
proxy/src/cmd/: proxy.rs
proxy/src/generator/: http.rs
proxy/src/handler/: http.rs
proxy/src/tproxy/: mod.rs  tproxy.rs  tproxy_in.rs  tproxy_out.rs
proxy/src/tproxy/unix/: mod.rs  socketopt.rs
rs-tproxy-controller/: Cargo.toml
rs-tproxy-controller/src/: lib.rs  main.rs  proxy.rs  raw_config.rs
rs-tproxy-controller/src/cmd/: command_line.rs  mod.rs  raw_config.rs
rs-tproxy-controller/src/cmd/daemon/: handler.rs
rs-tproxy-controller/src/cmd/interactive/: handler.rs  mod.rs  stdio.rs
rs-tproxy-controller/src/proxy/: config.rs  controller.rs  exec.rs  mod.rs  uds_server.rs
rs-tproxy-controller/src/proxy/net/: bridge.rs  iptables.rs  mod.rs  set_net.rs
rs-tproxy-plugin/: Cargo.toml
rs-tproxy-plugin/src/: handler.rs  header.rs  lib.rs  logger.rs  print.rs
rs-tproxy-proxy/: Cargo.toml
rs-tproxy-proxy/src/: controller.rs  lib.rs  raw_config.rs  signal.rs  task.rs  uds_client.rs  uds_server.rs
rs-tproxy-proxy/src/handler/: http.rs
rs-tproxy-proxy/src/handler/http/: action.rs  mod.rs  plugin.rs  rule.rs  selector.rs
rs-tproxy-proxy/src/handler/http/plugin/: basic_plugin.rs  logger.rs  print.rs  test.rs
rs-tproxy-proxy/src/proxy/: mod.rs
rs-tproxy-proxy/src/proxy/http/: config.rs  connector.rs  mod.rs  server.rs
rs-tproxy-proxy/src/proxy/tcp/: listener.rs  mod.rs  transparent_socket.rs
src/: async_pipe.rs  cmd.rs  config.rs  config_server.rs  handler.rs  main.rs  route.rs  server_helper.rs  signal.rs  tproxy.rs
src/cmd/: config.rs  proxy.rs
src/config_server/: accept.rs
src/generator/: http.rs
src/handler/: http.rs  mod.rs
src/parser/: http.rs  mod.rs  util.rs
src/parser/http/: body.rs  header.rs  message.rs  mod.rs  streaming.rs
src/tproxy/: config.rs  connector.rs  listener.rs  mod.rs  socketopt.rs  tproxy.rs  tproxy_in.rs  tproxy_out.rs
src/tproxy/unix/: mod.rs  socketopt.rs
tests/: Cargo.toml  exec.py
tests/integrations/: checker.py  mod.rs  test_controller.rs  test_http_action.rs  test_uds.rs
tests/integrations/uds_transfer/: mod.rs
