[package]
name = "rs-tproxy"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
libc = { version = "0.2.81", features = ["std"]}
nix = "0.19.0"
mio = "0.7.7"
futures = "0.3.10"
nom = { version = "6.1.0", features = ["regexp","std"] }
url = {version = "2.2.0"}
httparse = {git = "https://github.com/Andrewmatilde/httparse.git"}