[package]
name = "parser"
version = "0.1.0"
authors = ["Andrewmatilde <davis6813585853062@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.7.7"
nom = { version = "6.1.0", features = ["regexp","std"] }
url = {version = "2.2.0"}
httparse = {git = "https://github.com/Andrewmatilde/httparse.git"}
serde_derive = "1.0.123"
