[package]
name = "rs-tproxy-controller"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rs-tproxy-controller-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
futures = "0.3.10"
http = "0.2.3"
humantime-serde = "1.0"
hyper = {version = "0.14.4", features = ["runtime", "client", "server", "http1", "http2", "stream"]}
iptables = "0.4"
libc = {version = "0.2.81", features = ["std"]}
paw = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.123"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.8"
socket2 = "0.3"
structopt = {version = "0.3", features = ["paw"]}
tokio = {version = "1.4", features = ["full"]}
wildmatch = "2.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
json-patch = "0.2.6"
async-trait = "0.1.50"
actix-server = "2.0.0-beta.5"
actix-http = "3.0.0-beta.8"
bytes = "1.0.1"
cfg-if = "1.0.0"
bincode = "1.3.3"
tempfile = "3.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures-util = { version = "0.3.7", default-features = false, features = ["alloc", "sink"] }
rs-tproxy-proxy = {path = "../rs-tproxy-proxy"}
pnet = "0.28.0"
default-net = "0.2.0"
system_gateway = {git="https://github.com/aruntomar/system_gateway"}