[package]
name = "plugin-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-tproxy-plugin = { path = "../../rs-tproxy-plugin" }

serde_json = "1.0"
log = "0.4"